--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <label for="">Last Name:</label>
           <input type="text" />
         </div>
-        <div>
+        <div class="email">
           <label for="">Email:</label>
           <input type="email" name="" id="" />
         </div>
@@ -81,6 +81,7 @@ height: 35px;
 flex-shrink: 0;
 color: white;
 font-family: "Archivo Black", sans-serif;
+padding-left: 18px;
   }
 
   main {
@@ -124,5 +125,10 @@ font-family: "Archivo Black", sans-serif;
     margin-top: 30px;
   }
 
+  .email{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 
 </style>
