--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@ padding-left: 18px;
     border-radius: 30px;
     border: 2px solid #000;
     background: #323232;
+    /* box-shadow: 0px 10px 4px 0px #f6ea00; */
+    transition: 0.8s;
+
+  }
+
+  main:hover{
     box-shadow: 0px 10px 4px 0px #f6ea00;
-
-
   }
 
   button {
